--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h1 {
     align-items: center;
 }
 
-.like_button {
+.like-button {
     display: inline-block;
     padding: 16px;
     border-radius: 8px;    
@@ -111,15 +111,15 @@ h1 {
     color: #404040;
 }
 
-.like_button:not(.like_button__liked):hover {
+.like-button:not(.like-button--liked):hover {
     background-color: #e3e3e3
 }
 
-.like_button__label {
+.like-button__label {
     font-weight: bold;
 }
 
-.like_button__liked {
+.like-button--liked {
     color: #0CD977;
     cursor: default;
 }
